Name:           AERN-RmToRn-Poly
Version:        2011.1
Cabal-Version:  >= 1.8
Build-Type:     Custom
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:    GHC ==6.12.3
Description:
    Multi-variate polynomials with up/down rounded point-wise real arithmetic
    and common operations for continous functions, including evalution,
    composition and integration.
    Any up/down rounded real approximations can be used as coefficients.

extra-source-files:
  Makefile

Library
  hs-source-dirs: src
  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  cc-options:     -std=c99 -Wall -pedantic -O3 -march=native
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4,
        test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        AERN-Basics == 2011.1, 
        AERN-Real == 2011.1, 
        AERN-Real-Interval == 2011.1,
        AERN-Real-Double == 2011.1,
        AERN-RmToRn == 2011.1
  Exposed-modules:
      Numeric.AERN.RmToRn.Basis.Polynomial.GenericCoeff.Poly, 
      Numeric.AERN.RmToRn.Basis.Polynomial.GenericCoeff.Show, 
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff,
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff.Poly, 
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff.Show,
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff.Domain, 
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff.New,
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff.Conversion,
      Numeric.AERN.RmToRn.Basis.Polynomial.DoubleCoeff.Evaluation,
      Numeric.AERN.RmToRn.Basis.Polynomial.Internal.Basics,
      Numeric.AERN.RmToRn.Basis.Polynomial.Internal.EvalExport,
      Numeric.AERN.RmToRn.Basis.Polynomial.Internal.Symbolic 
    
  c-sources:
    cbits/tree234.c
    cbits/GenericCoeff/poly.c
    cbits/GenericCoeff/evaluation.c
    cbits/GenericCoeff/addition.c
    cbits/GenericCoeff/bounds.c
    cbits/GenericCoeff/scalar.c
    cbits/GenericCoeff/reduce.c
    cbits/DoubleCoeff/poly.c
    cbits/DoubleCoeff/evaluation.c
    cbits/DoubleCoeff/addition.c
    cbits/DoubleCoeff/bounds.c
    cbits/DoubleCoeff/scalar.c
  include-dirs: 
    cbits

Executable testAERN-RmToRn-Poly
  hs-source-dirs: src, tests
  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  main-is: Main.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4,
        test-framework-quickcheck2 >= 0.2 && < 0.4,
        AERN-Basics == 2011.1, 
        AERN-Real == 2011.1, 
        AERN-Real-Interval == 2011.1,
        AERN-Real-Double == 2011.1,
        AERN-RmToRn == 2011.1,
        AERN-RmToRn-Poly == 2011.1

Executable testAERN-RmToRn-Poly2
  hs-source-dirs: src, tests
  ghc-options:    -Wall -fno-warn-orphans -fno-warn-name-shadowing -O2
  main-is: Main2.hs
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4,
        test-framework-quickcheck2 >= 0.2 && < 0.4,
        AERN-Basics == 2011.1,
        AERN-Real == 2011.1, 
        AERN-Real-Interval == 2011.1,
        AERN-Real-Double == 2011.1,
        AERN-RmToRn == 2011.1,
        AERN-RmToRn-Poly == 2011.1
  
