Name:           AERN-RmToRn
Version:        2011.2.0.0
Cabal-Version:  >= 1.2
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:    GHC ==6.12.3
Description:
    Type classes abstracting typical operations for m-ary continuous real functions
    such as evaluation, composition, integration and automatic differentiation.  
    The operations work on some approxmations of the exact entities which induce rounding.
    Two kinds of rounding are supported: rounding up/down in the numerical order
    or rounding in/out in a refinement order.
    .
    A concrete implementation of refinement order rounded operations
    is given for intervals in the package AERN-RmToRn-Interval.
    A concrete implementation of up/down rounded operations is
    given in AERN-RmToRn-Poly using polynomial whose coefficients are supplied by either
    AERN-Real-Double or AERN-Real-MPFR.

Extra-Source-Files:
    CHANGES

Library
  hs-source-dirs: src
  ghc-options:     -O2
  Build-Depends:
        base >= 4 && < 5,
        containers >= 0.3 && < 0.4,
        QuickCheck >= 2.1 && < 3,
        test-framework >= 0.2 && < 0.4, test-framework-quickcheck2 >= 0.2 && < 0.4,
        criterion >= 0.5 && < 0.6,
        random >= 1.0 && < 2.0,
        AERN-Basics == 2011.2.0.0, AERN-Real == 2011.2.0.0, AERN-Real-Interval == 2011.2.0.0
  exposed-modules:       
        Numeric.AERN.RmToRn.Domain, 
        Numeric.AERN.RmToRn.New, 
        Numeric.AERN.RmToRn.Evaluation, 
        Numeric.AERN.RmToRn.MinimalFnBasis 
  other-modules:
        Numeric.AERN.RmToRn.MinimalFnBasis.Basics,
        Numeric.AERN.RmToRn.MinimalFnBasis.RingOps,
        Numeric.AERN.RmToRn.MinimalFnBasis.NumericOrder

