Name:           aern-intpoly
Version:        0.5.0
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2010 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       arbitrary precision real interval arithmetic
Tested-with:
                GHC==6.12.3,
                GHC==7.2.2,
                GHC==7.4.1
Description:
    Multi-variate polynomials with in-out-rounded point-wise arithmetic
    and common operations for continous functions, including evalution,
    composition and integration.
    Any in-out-rounded real approximation can be used as coefficients.
    (Typically the coefficients are intervals with Double or MPFR endpoints.)
    .    
    These polynomials typically encode function enclosures with two polynomial
    boundaries.

Library
  hs-source-dirs: src
  Build-Depends:
        base == 4.2.* || == 4.4.* || == 4.5.*,
        containers >= 0.3 && < 0.5,
        QuickCheck >= 2.4 && < 2.5,
        aern-order == 0.5.*,
        aern-real == 0.5.*,
        aern-interval == 0.5.*,
        aern-realfn == 0.5.*

  other-modules:
  exposed-modules: 
                   Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Config,
                   Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Differentiate,
                   Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.DomBoxChanges,
                   Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.New,
                   Numeric.AERN.RmToRn.Basis.Polynomial.IntPoly.Poly

