Name:           aern-ivp
Version:        0.5.0
Cabal-Version:  >= 1.8
Build-Type:     Simple
License:        BSD3
License-File:   LICENCE
Author:         Michal Konecny (Aston University)
Copyright:      (c) 2012 Michal Konecny
Maintainer:     mikkonecny@gmail.com
Homepage:       http://code.google.com/p/aern/
Stability:      experimental
Category:       Data, Math
Synopsis:       support for solving ODE IVPs using the interval polynomial Picard operator
Tested-with:    GHC==6.12.3,
                GHC==7.2.2,
                GHC==7.4.1
Description:    Support for solving ODE IVPs using the interval polynomial Picard operator.
    .
    Includes several example solvers.

Library
  hs-source-dirs:   src
  ghc-options:      -Wall
  Build-Depends:    
        base == 4.2.* || == 4.4.* || == 4.5.*,
        containers >= 0.3 && < 0.5,
        random >= 1.0 && < 1.1,
        gtk >= 0.12.0 && < 0.13,
        cairo >= 0.12.0 && < 0.13,
        glade >= 0.12.0 && < 0.13,
        stm >= 2.1.2.1 && < 2.4,
        filepath >= 1.1.0.4 && < 1.3,
        directory >= 1.0.1.1 && < 1.2,
        aern-order == 0.5.*,
        aern-real == 0.5.*,
        aern-realfn == 0.5.*,
        aern-realfn-plot-gtk == 0.5.*
  exposed-modules:  
        Numeric.AERN.IVP.Solver.Events,
        Numeric.AERN.IVP.Solver.Picard.UncertainTime,
        Numeric.AERN.IVP.Solver.Picard.UncertainValue,
        Numeric.AERN.IVP.Solver.ShrinkWrap,
        Numeric.AERN.IVP.Solver.Splitting,
        Numeric.AERN.IVP.Specification.Hybrid,
        Numeric.AERN.IVP.Specification.ODE

executable simple-uv-et
  build-depends:   base == 4.2.* || == 4.4.* || == 4.5.*,
        containers >= 0.3 && < 0.5,
        random >= 1.0 && < 1.1,
        directory >= 1.0 && < 1.2,
        aern-order == 0.5.*,
        aern-real == 0.5.*,
        aern-double == 0.5.*,
        aern-realfn == 0.5.*,
        aern-realfn-plot-gtk == 0.5.*,
        aern-poly == 0.5.*,
        aern-poly-plot-gtk == 0.5.*,
        aern-ivp == 0.5.*
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  demos
  main-is:         simple-uv-et.hs

executable simple-uv-ut
  build-depends:   base == 4.2.* || == 4.4.* || == 4.5.*,
        containers >= 0.3 && < 0.5,
        random >= 1.0 && < 1.1,
        directory >= 1.0 && < 1.2,
        aern-order == 0.5.*,
        aern-real == 0.5.*,
        aern-double == 0.5.*,
        aern-realfn == 0.5.*,
        aern-poly == 0.5.*,
        aern-ivp == 0.5.*
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  demos
  main-is:         simple-uv-ut.hs

executable simple-events
  build-depends:   base == 4.2.* || == 4.4.* || == 4.5.*,
        containers >= 0.3 && < 0.5,
        random >= 1.0 && < 1.1,
        directory >= 1.0 && < 1.2,
        aern-order == 0.5.*,
        aern-real == 0.5.*,
        aern-double == 0.5.*,
        aern-realfn == 0.5.*,
        aern-poly == 0.5.*,
        aern-ivp == 0.5.*
  ghc-options:     -Wall -rtsopts
  hs-source-dirs:  demos
  main-is:         simple-events.hs

